objects/Key_Player__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Role_Id__c</fullName>
        <label>Contact Role Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Key Players</relationshipLabel>
        <relationshipName>Key_Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Opportunity_Contact_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Opportunity Contact Role</label>
        <referenceTo>Custom_Opportunity_Contact_Role__c</referenceTo>
        <relationshipLabel>Key Players</relationshipLabel>
        <relationshipName>Key_Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Key Players</relationshipLabel>
        <relationshipName>Key_Players</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Key Player</label>
    <nameField>
        <displayFormat>KP-{000000}</displayFormat>
        <label>Key Player Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Players</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>